--- a/style.css
+++ b/style.css
@@ -3,4 +3,22 @@ body {
     /* background: linear-gradient(171.8deg, rgb(5, 111, 146) 13.5%, rgb(6, 57, 84) 78.6%); */
     /* background: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); */
     background: radial-gradient(circle at 74.2% 50.9%, rgb(14, 72, 222) 5.2%, rgb(3, 22, 65) 75.3%);
+    /* background: linear-gradient(181deg, rgb(2, 0, 97) 15%, rgb(97, 149, 219) 158.5%); */
+}
+/* Add this CSS to your existing style.css file */
+
+@keyframes flash {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+}
+
+#blinking_image {
+    animation: flash 1s infinite;
 }
