--- a/style.css
+++ b/style.css
@@ -19,17 +19,25 @@ body, html {
     background-size: cover;
 }
 
+
+
 #blinking_image {
-    animation: flash 1s infinite;
+    /* animation: flash 1s 1; Runs the animation for 1 second, only once */
     position: relative;
-    z-index: 1; /* Ensure it's on top of the video */
+    z-index: 1; 
+    margin-top: 20px; 
+    width: 200px; 
+    height: 200px; 
+    left: 50%;
+    transform: translateX(-50%); 
 }
 
-@keyframes flash {
+/* @keyframes flash {
     0%, 100% {
         opacity: 1;
     }
     50% {
         opacity: 0;
     }
-}
+} */
+
