--- a/style.css
+++ b/style.css
@@ -41,3 +41,46 @@ body, html {
     }
 } */
 
+h1 {
+    color: white;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    font-size: 50px;
+    /* top: 50%; */
+    transform: translateY(-50%);
+    margin-top: 35px;
+
+}
+
+#app {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    background: #fff;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+header {
+    text-align: center;
+    padding: 10px 0;
+}
+
+#search {
+    margin: 20px 0;
+}
+
+#results {
+    margin: 20px 0;
+}
+
+#locationList {
+    list-style-type: none;
+    padding: 0;
+}
+
+#locationList li {
+    padding: 10px;
+    background: #eee;
+    margin-bottom: 10px;
+}
